# $Id$

2007-02-15	Ivan Y. Khvostishkov

	* main/Utils/Archivers/: started archiver utilities, added wrapper
	for GNU tar, added PECL ZipArchive proxy / Info-Zip wrapper.

2007-02-13	Konstantin V. Arkhipov

	* main/Criteria/Criteria.class.php, core/OSQL/QueryResult.class.php:
	synced Criteria::getResult() behaviour with other get-methods.

2007-02-10	Dmitry E. Demidov

	* core/Form/Primitives/ExplodedPrimitive.class.php: added support for
	regexp separator.

2007-02-09	Konstantin V. Arkhipov

	* main/Utils/ClassUtils.class.php: return value are omitted now for
	all methods.

	* main/Flow/SaveCommand.class.php: fetches object before form's
	export.

	* main/Flow/TakeCommand.class.php: abstract now.

2007-02-09	Dmitry E. Demidov

	* core/Form/Primitives/PrimitiveImage.class.php: fix return value.

2007-02-06	Denis M. Gabaidulin

	* core/Form/Primitives/PrimitiveIdentifierList.class.php: list of
	identificable objects primitive was added.

2007-02-05	Konstantin V. Arkhipov

	* main/DAOs/Workers/: all workers are now calls dao's uncacheLists(),
	so you can now override it.

	* meta/builders/, main/DAOs/, main/Containers/: all helpers are
	ordinary methods now, all static stuff reverted (see 2006-12-24 for
	details).

2007-02-02	Konstantin V. Arkhipov

	* meta/builders/ProtoClassBuilder.class.php: min/max values
	added to identifier's too.

2007-02-01	Konstantin V. Arkhipov

	* core/OSQL/SelectQuery.class.php: ported to OrderChain.

	* main/DAOs/ProtoDAO.class.php: proto-related stuff moved here from
	StorableDAO.

	* core/OSQL/OrderChain.class.php: introduced.

	* main/Criteria/Criteria.class.php: ability to add custom sort for
	fetching collections implemented.

2007-01-31	Dmitry E. Demidov

	* main/Utils/ClassUtils.class.php: added class for copy 
	object properties.

2007-01-31	Konstantin V. Arkhipov

	* core/OSQL/DataType.class.php, meta/types/:
	Unsigned{Small,,Big}Integer implemented.

	* meta/types/: min/max values for SmallInteger/Integer primitives.
