@@ -1,5 +1,10 @@
 # $Id$
 
+2007-02-16	Konstantin V. Arkhipov
+
+	* main/Flow/HttpRequest.class.php: BC breakage: getAttachedList()
+	renamed to getAttached().
+
 2007-02-15	Ivan Y. Khvostishkov
 
 	* main/Utils/Archivers/: started archiver utilities, added wrapper
